fix: title name

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<h1>İsmail Taşdelen</h1>
+				<h1>Thiago Gomes</h1>
 				<p>Security Researcher &nbsp;&bull;&nbsp; Bug Bounty Hunter </p>
 				<nav>
 					<ul>
