fix: adding title and removing tweet

--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>Thiago Gomes</h1>
-				<p>Security Researcher &nbsp;&bull;&nbsp; Bug Bounty Hunter </p>
+				<p>Front End Developer </p>
 				<nav>
 					<ul>
-						<li><a href="https://twitter.com/@ismailtsdln" class="icon fa-twitter" target="_blank"><span
-									class="label">Twitter</span></a></li>
 						<li><a href="https://www.linkedin.com/in/ismailtasdelen" class="icon fa-linkedin"
 								target="_blank"><span class="label">Linkedin</span></a></li>
+
 						<li><a href="https://www.youtube.com/channel/UCPqc50Wmt6ZF2BJWtNJlq-g"
 								class="icon fa-youtube-play" target="_blank"><span class="label">YouTube</span></a></li>
+
 						<li><a href="https://github.com/ismailtasdelen" class="icon fa-github" target="_blank"><span
 									class="label">Github</span></a></li>
+									
 						<li><a href="mailto:pentestdatabase@gmail.com" class="icon fa-envelope-o" target="_blank"><span
 									class="label">Email</span></a></li>
 					</ul>
